builder/css/custom.css
/* ... */
ul.files-list > li > .remove-item:hover{
  color: #fff;
  background-color: #d9534f;
}
.is-edited .method .edit-method {
  color: #3379b7 !important;
}
.missingParameters .method .edit-method,
.requiredParameters{
  color: #f08004 !important;
}
.errorParameters .method .edit-method {
  color: #c63d3a !important;
}
.requiredParameters{
  display: none;
}
.missingParameters .requiredParameters{
  display: block !important;
}
.btn.clipboard{
  border-color: #ced4da !important;
  box-shadow: none !important;
}
.method.missingParameters:after{
  content: "";
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  transition-duration: .2s;
  transition-property: box-shadow;
  z-index: -1;
  animation: pulse 1s forwards;
}

/* METHOD DETAILS */
.method-details{
  border: 1px solid #a7d0f1;
  border-top: none;
  border-bottom-left-radius : 4px;
  border-bottom-right-radius: 4px;
  background-color: #f3f8ff;
  padding-top: 10px;
  font-size: 14px;
}
.method-details .form-control{
  padding: 4px 6px;
}
.method-details select.form-control:not([size]):not([multiple]) {
  height: calc(2.25rem);
}
.method-details label > small {
  opacity: .6;
  font-size: 12px;
}
.method-details .tabs-list{
  border-bottom: 1px solid #e5e5e5;
  width: 100%;
  margin-bottom: 12px;
}
.method-details .tab-result .form-control[readonly]{
  background: repeating-linear-gradient( -45deg, #ffffff, #ffffff 10px, #f1F1F1 10px, #f1F1F1 20px );
  cursor: default;
}
.method-details .tab-result .input-group-prepend > .input-group-text{
  min-width: 80px;
  justify-content: flex-end;
}

.method-details .form-group{
  margin-bottom: 8px;
}
.method-details ul.list-unstyled > li{
  margin-bottom: 0px;
}
.method-details .btn.show-doc{
  position: relative;
  box-shadow: none !important;
}
/* =====  METHODS  ===== */
.col-methods{
  box-shadow: -2px 0px 8px 0px #00000024;
}
.methods-filter{
  background-color: #f2f2f2;
  padding-top: 15px;
  padding-bottom: 10px;
  border-top : 1px solid #e5e5e5;
  position: relative;
}
.methods-filter.hidden{
  display: none;
}
.methods-filter:before{
  content:"";
  display: block;
  height: 10px;
  width: 10px;
  transform: rotate(45deg);
  position: absolute;
  top: -5px;
  right: 30px;
  background-color: #f2f2f2;
  border-top : 1px solid #e5e5e5;
  border-left: 1px solid #e5e5e5;
}
.methods-filter :last-child,
.methods-filter .input-group label,
.methods-filter label.label-btn-group {
  margin-bottom: 0;
}
.methods-filter label.label-btn-group {
  margin-right: 10px;
}
#filterMethods{
  margin-right: 15px;
}
.generic-methods-container {
  border-top: 2px solid #e5e5E5;

}.generic-methods-container > .row > div{
  height: 100%;
  overflow-y: auto;
}
.generic-methods-container > .row > .col > ul:first-child{
  padding-top: 10px;
}
.generic-methods-container > .row > .col-auto{
  padding: 0;
}
.show-techniques .col-methods > .row{
  transform: translateX(50px);
}
#categories-list{
  margin: 0;
  padding: 6px 0 0 0;
  list-style: none;
}
#categories-list > h4{
  padding: 4px 15px;
}
#categories-list > li > a{
  display: block;
  padding: 6px 15px;
  color: #337ab7;
  text-decoration: none !important;
}
.main-footer{
  display: flex;
  justify-content: flex-end;
  padding: 10px 0;
  border-top: 1px solid #e5e5e5;
}
.main-footer .btn{
  margin-right: 15px;
}

/* =====  METHOD  ===== */
ul.list-unstyled > li{
  margin-bottom: 10px;
}
.method {
  border: 1px solid #e5e5e5;
  border-radius: 4px;
  display: flex;
}
.active .method {
  border-top-color: #a7d0f1;
  border-left-color: #a7d0f1;
  border-right-color: #a7d0f1;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.col-methods .method > div{
  padding-top : 10px;
  padding-bottom : 10px;
}
#methods .method .method-info{
  padding: 8px;
  position: relative;
}
#methods .method .method-info .btn-holder {
  position: absolute;
  right: 6px;
  top: 6px;
  z-index: 10;
}
#methods .method .method-info .btn-holder .method-action {
  background-color: transparent;
  border: none;
  cursor: pointer;;
  transition-property: opacity;
  transition-duration: .2s;
  opacity: 0;
}
#methods .method:hover .method-info .btn-holder .method-action {
  opacity: .6;
}
#methods .method .method-info .btn-holder .method-action:hover {
  opacity: 1;
}
#methods .method .method-info .btn-holder + .row > div:first-child{
  padding-right: 70px;
}
.method .cursorMove {
  background-color: #ededed;
  padding: 0 10px;
  color: #222d4299;
  display: flex;
  align-items: center;
  cursor: grab;
}
.method .method-condition,
.method .method-name,
.method .method-param,
.method .method-errors,
.method .requiredParameters{
  position: relative;
}
.method .method-condition ~ div:before{
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 5px;
  width: 3px;
  background-color: #337ab7;
}
.method .method-condition ~ div{
  padding-left: 15px;
}
.method .method-name {
  font-size: 16px;
  color: #222D42;
}
.col-methods .method .method-name {
  cursor: pointer;
  padding: 8px;
  display: flex;
  align-self: center;
}
.method .method-name i{
  color: #337ab7;
}
.method .tooltip-icon{
  opacity: 0;
  transition-duration: .2s;
}
.method:hover .tooltip-icon{
  opacity: 1;
}
.method-param > label{
  display: inline-block;
  color: #777;
}
.method-condition > label{
  display: inline-block;
  color: #337ab7;
}
.method-param > .form-control,
.method-condition > .form-control{
  display: inline-block;
  border: none !important;
  background-color: transparent !important;
  box-shadow: none !important;
  outline: none !important;
  width: auto !important;
  padding: 0;
}
.method .show-doc,
.method .edit-method{
  position: relative;
  display: flex;
  align-items: center;
  color: #337ab7;
  border-left: 1px solid #e5e5e5;
  cursor: pointer;
}
.method-details .btn.show-doc{
  position: relative;
  box-shadow: none !important;
}
/* ... */

